testsuite: added explicit compile rule
filter out non-C files

Signed-off-by: Enrico Scholz <enrico.scholz@ensc.de>

--- a/testsuite/Makefile
+++ b/testsuite/Makefile
@@ -40,3 +40,6 @@ mgmmem:		mgmmem.c ../mgmmem.h ../mgmmem.c
 sd-misc:	sd-misc.c
 
 type-utils:	type-utils.c ../type-utils.h
+
+$(TESTS):
+	$(CC) $(CFLAGS) $(LDFLAGS) $(filter %.c,$^) -o $@ $(LDLIBS)
